--- a/index.html
+++ b/index.html
@@ -406,16 +406,33 @@ const PHOTOS = [
   const pauseLetter = document.getElementById('pauseLetter');
 
   const lines = [
-    "My dearest,",
-    "",
-    "On this special morning I woke thinking how lucky I am to have you. Your smile turns everyday moments into stories I want to keep forever.",
-    "",
-    "You have a quiet strength that calms me and a laugh that colors my days brighter than sunrise. Today I promise to make you feel as treasured as you make me feel.",
-    "",
-    "May the candles glow for every wish you keep; may laughter find you at every turn.",
-    "",
-    "Always yours,",
-    "— Mihir"
+    "Happy Birthday, My Beautiful!",
+
+"I wish I could be there to celebrate with you today, to hold you close, and to make you feel as special as you are to me. But even though we're miles apart, I carry you with me always, and I’m counting down the days until I can see you again.", 
+
+"Nin life alli yen yen dreams itkondidiyo adelladu aagli..aguthe kuda..yavaglu nag nagtha kushiyagiru..",
+
+"Specially this is your first birthday together as a couple, So I wanted to make it memorable adikke ningoskara ond website madi adralli ond love letter baritha idini..I hope you like it!!",
+
+"Sadyakke real love letter kodakk aglila andru..virtual love letter kalsidini..",
+
+"14th August midnight 12:49AM, the moment nan dairya maadi ning propose madidd moment adu and yes it's been 105 days already!!",
+
+"God's grace ninu nanna propose na accept madidd kshana adu..nanu nin reply nodi room alle dance yella madbittidde!!",
+"Nin andre nang thumba ishta apii..gothilla nan yen punya madidini antha..devru nang oblu olle hudgi na jothege kottidane..forever grateful for that..nang gothagthilla yen helbeku antha..",
+"nin nan mele thorso care uh,",
+"chik magu thara mado keetle,",
+"biddhu biddhu call mado habittuh,",
+"ah smile uh, ah kannu, ah dance uhh",
+"yenen idiyo yelladukku fidhaaa agogbittidini kanriiii Dhanya avree!!",
+"Thank you for being you and being with me!",
+"and once again,",
+"ಹುಟ್ಟುಹಬ್ಬದ ಶುಭಾಶಯಗಳು ಧನ್ಯ❤️",
+"You are and you will be my best friend forever Doctree👩🏼‍⚕️",
+"Begaaaa siguuuuuu!!",
+"I LOVE YOU SO MUCH BANGARA❤️🫂",
+    "with all my love,",
+    "— your senior Mihir"
   ];
 
   let t=null, li=0, ci=0, paused=false, SPEED=100;
@@ -452,3 +469,4 @@ document.addEventListener('keydown', (e)=> { if(e.key==='Escape'){ document.quer
 </script>
 </body>
 </html>
+
