--- a/index.html
+++ b/index.html
@@ -320,11 +320,7 @@
 
 /* ===== PhotoBooth (uses uploaded image path) ===== */
 const PHOTOS = [
-  'images/DSC01931.JPG',
-  'images/DSC01926.JPG',
-  'images/DSC01932.JPG',
-  'images/DSC01933.JPG',
-  'images/DSC01970.JPG'
+  'DSC01926.JPG'
 ];
 
 (function(){
@@ -469,4 +465,5 @@ document.addEventListener('keydown', (e)=> { if(e.key==='Escape'){ document.quer
 </script>
 </body>
 </html>
+
 
