--- a/index.html
+++ b/index.html
@@ -388,11 +388,11 @@
 
 /* ===== PhotoBooth ===== */
 const PHOTOS = [
-  'images/DSC01931.JPG',
-  'images/DSC01926.JPG',
-  'images/DSC01932.JPG',
-  'images/DSC01933.JPG',
-  'images/DSC01970.JPG'
+  'DSC01931.JPG',
+  'DSC01926.JPG',
+  'DSC01932.JPG',
+  'DSC01933.JPG',
+  'DSC01970.JPG'
 ];
 (function(){
   const photoBtn = document.getElementById('photoBtn');
@@ -703,3 +703,4 @@ document.addEventListener('keydown', (e)=> { if(e.key==='Escape'){ document.quer
 </script>
 
 </html>
+
