--- a/index.html
+++ b/index.html
@@ -388,7 +388,8 @@
 
 /* ===== PhotoBooth ===== */
 const PHOTOS = [
-  'DSC01926.JPG'
+  'DSC01926.JPG',
+  'DSC01931.JPG'
 ];
 (function(){
   const photoBtn = document.getElementById('photoBtn');
@@ -699,5 +700,6 @@ document.addEventListener('keydown', (e)=> { if(e.key==='Escape'){ document.quer
 </script>
 
 </html>
+
 
 
